# rust-db-project-template

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
migrations/: 1_setup.sql
src/: config.rs  main.rs
