[package]
name = "rust-db-project-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.1", features = ["derive", "env"]}
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
